manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "mavrick"
    labels:
        app: "mavrick"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: mavrick5313-mavrick.3147c6fdc3c1452f8495.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "mavrick"
                servicePort: 80
